# qnPaper-ai

./: .env.example  .gitignore  README.md  index.html  package.json  tailwind.config.js
backend/: .gitignore  pyproject.toml  requirements.txt  server.py
backend/ai_pipeline_service/: __init__.py  pdf_processor.py  schemas.py
backend/ai_pipeline_service_qp/: __init__.py  qp_processor.py  schemas.py
backend/database/: db_connection.py  db_operations.py  db_schema.py
backend/question_paper_generation/: generator.py  prompt_generator.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: BloomsTaxonomy.jsx  FileDropZone.jsx  PaperPreviewPanel.jsx  QuestionMatrix.jsx  SectionBuilder.jsx  Sidebar.jsx  SourceCard.jsx  TemplateCard.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AuthPage.jsx  DashboardPage.jsx  GeneratePage.jsx  PaperPreviewPage.jsx  QuestionPaperLayout.tsx  SettingsPage.jsx  TemplateDetail.tsx  TemplatesPage.jsx  firebase.js
frontend/src/utils/: api.js  mockGenerate.js  storage.js
