[project]
name = "qp-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.13.0",
    "certifi>=2026.5.20",
    "cffi>=2.0.0",
    "charset-normalizer>=3.4.7",
    "colorama>=0.4.6",
    "cryptography>=48.0.0",
    "distro>=1.9.0",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "filetype>=1.2.0",
    "google-ai-generativelanguage>=0.6.15",
    "google-api-core>=2.25.2",
    "google-api-python-client>=2.196.0",
    "google-auth>=2.53.0",
    "google-auth-httplib2>=0.4.0",
    "google-genai>=1.75.0",
    "google-generativeai>=0.8.6",
    "googleapis-common-protos>=1.75.0",
    "grpcio>=1.80.0",
    "grpcio-status>=1.71.2",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httplib2>=0.31.2",
    "httpx>=0.28.1",
    "idna>=3.16",
    "jsonpatch>=1.33",
    "jsonpointer>=3.1.1",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.3",
    "langchain-protocol>=0.0.15",
    "langsmith>=0.8.5",
    "orjson>=3.11.9",
    "packaging>=26.2",
    "proto-plus>=1.28.0",
    "protobuf>=5.29.6",
    "pyasn1>=0.6.3",
    "pyasn1-modules>=0.4.2",
    "pycparser>=3.0",
    "pydantic[email]>=2.13.4",
    "pydantic-core>=2.46.4",
    "pyjwt>=2.13.0",
    "pymango>=0.1.1",
    "pymongo[srv]>=4.17.0",
    "pymupdf>=1.27.2.3",
    "pyparsing>=3.3.2",
    "pypdf>=6.12.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "requests-toolbelt>=1.0.0",
    "sniffio>=1.3.1",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "uritemplate>=4.2.0",
    "urllib3>=2.7.0",
    "uuid-utils>=0.16.0",
    "uvicorn>=0.47.0",
    "websockets>=16.0",
    "xxhash>=3.7.0",
    "zstandard>=0.25.0",
    "langchain-groq>=1.1.2",
    "bson>=0.5.10",
]
